# pytorch-models

./: README.md  pyproject.toml  setup.cfg
.github/: requirements.txt
.github/workflows/: test.yaml
pytorch_models/: transformer.py  utils.py
pytorch_models/audio/: __init__.py  data2vec_audio.py  encodec.py  sew.py  spectrogram.py  wav2vec2.py  whisper.py
pytorch_models/audio2text/: __init__.py  whisper.py
pytorch_models/image/: __init__.py  convnext.py  detr.py  maxvit.py  mlp_mixer.py  mobile_vit.py  sam.py  vit.py
pytorch_models/text/: __init__.py  bert.py  generator.py  gpt.py  gpt2.py  t5.py
tests/: test_encodec.py  test_wav2vec2.py
tests/audio/: test_data2vec_audio.py  test_encodec.py  test_sew.py  test_spectrogram.py  test_wav2vec2.py  test_whisper.py
tests/audio2text/: test_whisper.py
tests/image/: test_convnext.py  test_detr.py  test_maxvit.py  test_mlp_mixer.py  test_mobile_vit.py  test_vit.py
tests/text/: test_bert.py  test_gpt.py  test_gpt2.py  test_t5.py
