[metadata]
name = pytorch-models
version = 0.0.1
author = Thien Tran
url = https://github.com/gau-nernst/pytorch-models

[options]
packages = find:
install_requires =
    torch >= 2.0

[options.extras_require]
dev = 
    pytest
    transformers
    librosa
    openai-whisper @ git+https://github.com/openai/whisper.git
    encodec @ git+https://github.com/facebookresearch/encodec.git
